updated index to include 4square attribution

--- a/index.html
+++ b/index.html
@@ -25,7 +25,9 @@
             <div class="sidebar-sticky">
               <ul class="nav flex-column" data-bind="foreach: nearAvalonFilter">
                     <a href="#"><li class="nav-item text-white location_list" data-bind="text: title, click: $parent.populateAndBounceMarker"></li></a>
+
                 </ul>
+                <p>Powered by FourSquare</p>
             </div>
           </nav>
 <!--  Place Map on Page. Reference Understanding API Services | Places Details Udacity Course -->
